--- a/market.html
+++ b/market.html
@@ -286,7 +286,7 @@
         </tr>
         <tr>
           <td>Bag of Coffee</td>
-          <td><input type="number" min="0" value="0" data-ingredient="coffee" class="pack-qty" /></td>
+          <td><input type="number" min="0" value="0" data-ingredient="coffee_beans" class="pack-qty" /></td>
           <td><input type="number" min="0" step="0.01" value="0" class="price-per-pack" /></td>
           <td class="subtotal">$0.00</td>
           <td class="suggested"></td>
