--- a/register.html
+++ b/register.html
@@ -574,28 +574,10 @@
 </p>
       <div class="item-grid">
   <!-- Combos -->
-   <div class="item-card" data-name="Double Trouble Deal" data-price="1250" data-category="Combo Deals" data-image="assets/images/bleederbox.png">
-    <img src="assets/images/combo.png" alt="Double Trouble Deal" />
-    <h3>Double Trouble Deal</h3>
-    <p>$1250</p>
-    <div class="add-controls">
-      <input type="number" class="quantity-input" min="1" value="1" />
-      <button class="add-btn">Add</button>
-    </div>
-  </div>
-  <div class="item-card" data-name="Crispy Junior Box" data-price="1000" data-category="Combo Deals" data-image="assets/images/bleederbox.png">
-    <img src="assets/images/combo.png" alt="Crispy Junior Box" />
-    <h3>Crispy Junior Box</h3>
-    <p>$1000</p>
-    <div class="add-controls">
-      <input type="number" class="quantity-input" min="1" value="1" />
-      <button class="add-btn">Add</button>
-    </div>
-  </div>
-  <div class="item-card" data-name="The Bleeder Box" data-price="1500" data-category="Combo Deals" data-image="assets/images/bleederbox.png">
+     <div class="item-card" data-name="The Bleeder Box" data-price="1400" data-category="Combo Deals" data-image="assets/images/bleederbox.png">
     <img src="assets/images/combo.png" alt="The Bleeder Box" />
     <h3>The Bleeder Box</h3>
-    <p>$1500</p>
+    <p>$1400</p>
     <div class="add-controls">
       <input type="number" class="quantity-input" min="1" value="1" />
       <button class="add-btn">Add</button>
@@ -610,16 +592,7 @@
       <button class="add-btn">Add</button>
     </div>
   </div>
-  <div class="item-card" data-name="Heart Stopper Meal" data-price="2000" data-category="Combo Deals" data-image="assets/images/bleederbox.png">
-    <img src="assets/images/combo.png" alt="Heart Stopper Meal" />
-    <h3>Heart Stopper Meal</h3>
-    <p>$2000</p>
-    <div class="add-controls">
-      <input type="number" class="quantity-input" min="1" value="1" />
-      <button class="add-btn">Add</button>
-    </div>
-  </div>
-   <!-- Rim Job -->
+     <!-- Rim Job -->
   <div class="item-card" data-name="Rim Job" data-price="85" data-category="Desserts" data-image="assets/images/rimjob.png">
     <img src="assets/images/rimjob.png" alt="Rim Job" />
     <h3>Rim Job</h3>
@@ -745,13 +718,13 @@ function subscribeCustomerSuggestions() {
 subscribeCustomerSuggestions();
 // Ingredient setup
 const productIngredients = {
-  "Burgershot Bleeder": { burger_buns: 1, ground_beef: 1, cheese_slices: 1 },
+  "The Bleeder": { burger_buns: 1, ground_beef: 1, cheese_slices: 1 },
   "The Double Shot": { burger_buns: 1, ground_beef: 1, lettuce: 1 },
   "Heart Stopper Burger": { burger_buns: 1, ground_beef: 3, cheese_slices: 1 },
   "The Prickley": { burger_buns: 1, chicken: 1, lettuce: 1 },
   "The Simply": { burger_buns: 1, chicken: 1, bacon: 1 },
   "Money Shot": {burger_buns: 1, ground_beef: 2, cheese_slices: 1 },
-  "Burgershot Soda": { corn_syrup: 1 },
+  "Soda": { corn_syrup: 1 },
   "Coffee": {coffee_beans: 1},
   "Fries": { potato: 2 },
   "Ice Cream": { ice_cream: 1, vanilla: 2 },
@@ -760,50 +733,22 @@ const productIngredients = {
 };
 const comboDetails = {
   "The Bleeder Box": {
-    price: 1500,
+    price: 1400,
     components: [
-      { name: "Burgershot Bleeder", quantity: 5 },
+      { name: "The Bleeder", quantity: 5 },
       { name: "Fries", quantity: 5 },
-      { name: "Burgershot Soda", quantity: 10 },
+      { name: "Coffee", quantity: 10 },
       { name: "Rim Job", quantity: 1 }
     ]
   },
   "Patty Pounder Combo": {
     price: 750,
     components: [
-      { name: "The Double Shot", quantity: 5 },
-      { name: "Burgershot Soda", quantity: 5 },
+      { name: "The Prickley", quantity: 5 },
+      { name: "Coffee", quantity: 5 },
       { name: "Cream Pie", quantity: 1 }
     ]
   },
-  "Heart Stopper Meal": {
-    price: 2000,
-    components: [
-      { name: "Heart Stopper Burger", quantity: 5 },
-      { name: "Burgershot Soda", quantity: 10 },
-      { name: "Fries", quantity: 5 },
-      { name: "Rim Job", quantity: 1 }
-    ]
-  },
-  "Double Trouble Deal": {
-    price: 1250,
-    components: [
-      { name: "Money Shot", quantity: 5 },
-      { name: "Burgershot Soda", quantity: 10 },
-      { name: "Fries", quantity: 5 },
-      { name: "Rim Job", quantity: 1 },
-      { name: "Ice Cream", quantity: 1 }
-    ]
-  },
-  "Crispy Junior Box": {
-    price: 1000,
-    components: [
-      { name: "The Prickley", quantity: 5 },
-      { name: "Burgershot Soda", quantity: 10 },
-      { name: "Rim Job", quantity: 1 },
-      { name: "Ice Cream", quantity: 1 }
-    ]
-  }
 };
 const ingredientLabels = {
   burger_buns: "burger buns",
