--- a/orders.html
+++ b/orders.html
@@ -303,6 +303,7 @@ aside.order-summary {
   <th>Customer</th>
   <th>The Prickley</th>
   <th>The Bleeder</th>
+  <th>The Simply</th>
   <th>Coffee</th>
   <th>Fries</th>
   <th>Rim Job</th>
