--- a/inventory.html
+++ b/inventory.html
@@ -431,12 +431,22 @@ const comboRecipes = {
     coffee_beans: 10,
     sugar: 1,
     flour: 1
+  },
+  "Big Buns Deal": {
+    burger_buns: 10,
+    chicken: 10,
+    bacon: 10,
+    potato: 10,
+    coffee_beans: 15,
+    sugar: 1,
+    flour: 1
   }
 };
 
 const itemRecipes = {
   "The Bleeder": { burger_buns: 1, ground_beef: 1, cheese_slices: 1 },
   "The Prickley": { burger_buns: 1, chicken: 1, lettuce: 1 },
+  "The Simply": { burger_buns: 1, chicken: 1, bacon: 1 },
   "Fries": { potato: 2 },
   "Coffee": { coffee_beans: 1 },
   "Dessert": { sugar: 1, flour: 1 }
