--- a/market.html
+++ b/market.html
@@ -228,7 +228,8 @@
     <h1>🏪 Market Run</h1>
 
  <p style="font-weight:600; color:#c82333; margin-top:-1rem; margin-bottom:1.5rem;">
-  Please remember to submit this form it is ESSENTIAL for our logs. Also post in emails to confirm how much you spend. <br><br>
+  Please remember to submit this form, it is ESSENTIAL for our logs. Also post in emails to confirm how much you spend.
+  Suggested packs gives enough for 10 of each combo. <br><br>
 </p>
 
 <div class="mb-3">
@@ -251,13 +252,6 @@
       <tbody>
         <tr class="divider-row">
           <td colspan="6">Food Stand</td>
-        </tr>
-         <tr>
-          <td>Bottled Corn Syrup</td>
-          <td><input type="number" min="0" value="0" data-ingredient="corn_syrup" class="pack-qty" /></td>
-          <td><input type="number" min="0" step="0.01" value="0" class="price-per-pack" /></td>
-          <td class="subtotal">$0.00</td>
-          <td class="suggested"></td>
         </tr>
         <tr>
           <td>Flour Sack</td>
@@ -364,7 +358,6 @@ const UNIT_PER_PACK = 5;
 const notification = document.getElementById('notification');
 
 const ingredientNames = {
-  corn_syrup: "Bottled Corn Syrup",
   flour: "Flour Sack",
   burger_buns: "Package of Buns",
   sugar: "Sugar Sack",
@@ -528,17 +521,16 @@ updateCosts();
 async function setSuggestedPacks() {
   // Packs required for 15 Bleeders + 10 Pounders
   const required = {
-  burger_buns: 60,
-  ground_beef: 20,
-  cheese_slices: 20,
-  lettuce: 15,
-  corn_syrup: 0,
-  potato: 80,
-  sugar: 7,
-  flour: 7,
-  chicken: 40,
+  burger_buns: 40,
+  ground_beef: 10,
+  cheese_slices: 10,
+  lettuce: 10,
+  potato: 40,
+  sugar: 6,
+  flour: 6,
+  chicken: 30,
   bacon: 20,
-  coffee_beans: 80,
+  coffee_beans: 60,
 };
 
   const inventory = await getLiveInventory();
