--- a/market.html
+++ b/market.html
@@ -228,8 +228,8 @@
     <h1>🏪 Market Run</h1>
 
  <p style="font-weight:600; color:#c82333; margin-top:-1rem; margin-bottom:1.5rem;">
-  Please remember to submit this form, it is ESSENTIAL for our logs. Also post in emails to confirm how much you spend.
-  Suggested packs gives enough for 10 of each combo. <br><br>
+  Please remember to submit this form, it is ESSENTIAL for our logs. Also post in emails to confirm how much you spend. <br><br>
+  Suggested packs gives enough for 10 of each combo. 
 </p>
 
 <div class="mb-3">
