--- a/home.html
+++ b/home.html
@@ -32,17 +32,16 @@
       flex-shrink: 0;
     }
     .sidebar h2 {
-  font-weight: 700;
-  font-size: 1.8rem;
-  margin-bottom: 2rem;
-  user-select: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.4rem;
-  white-space: nowrap;   /* ✅ prevents wrapping */
-}
-
+      font-weight: 700;
+      font-size: 1.8rem;
+      margin-bottom: 2rem;
+      user-select: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.4rem;
+      white-space: nowrap;
+    }
     .sidebar a {
       color: white;
       text-decoration: none;
@@ -69,7 +68,6 @@
       flex-direction: column;
       gap: 2rem;
     }
-
     header.welcome {
       text-align: center;
     }
@@ -86,7 +84,6 @@
       margin-top: 0;
       user-select: none;
     }
-
     section.quick-stats {
       display: flex;
       gap: 1.5rem;
@@ -112,7 +109,6 @@
       font-weight: 600;
       color: #333;
     }
-
     section.recent-orders {
       background: white;
       padding: 1rem 1.5rem;
@@ -147,7 +143,6 @@
     .recent-orders li:last-child {
       border-bottom: none;
     }
-
     section.quick-nav {
       display: flex;
       gap: 1rem;
@@ -170,7 +165,6 @@
     .quick-nav a:hover {
       background-color: #a71d2a;
     }
-
     section.alerts {
       max-width: 900px;
       background: white;
@@ -196,8 +190,6 @@
     .alerts ul li {
       margin-bottom: 0.3rem;
     }
-
-    /* Scrollbar for recent orders */
     .recent-orders ul::-webkit-scrollbar {
       width: 7px;
     }
@@ -205,94 +197,341 @@
       background-color: #c82333;
       border-radius: 20px;
     }
-
     .announcement-banner {
-    background-color: #c82333;
-    color: #fff4d6;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    padding: 0.5rem 0;
-    overflow: hidden;
-    white-space: nowrap;
-    box-sizing: border-box;
-    user-select: none;
-  }
-
-  .announcement-banner span {
-    display: inline-block;
-    padding-left: 100%;
-    animation: scroll-left 40s linear infinite;
-  }
-
-  /* Adjust animation duration for speed */
-  @keyframes scroll-left {
-    0% {
-      transform: translateX(0);
+      background-color: #c82333;
+      color: #fff4d6;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
+      padding: 0.5rem 0;
+      overflow: hidden;
+      white-space: nowrap;
+      box-sizing: border-box;
+      user-select: none;
     }
-    100% {
-      transform: translateX(-100%);
+    .announcement-banner span {
+      display: inline-block;
+      padding-left: 100%;
+      animation: scroll-left 40s linear infinite;
+    }
+    @keyframes scroll-left {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-100%); }
+    }
+    .hamburger {
+      display: none;
+      font-size: 2rem;
+      background: #c82333;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      padding: 6px 12px;
+      cursor: pointer;
+      position: fixed;
+      top: 15px;
+      left: 15px;
+      z-index: 3000;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.25);
+      transition: background 0.2s;
+    }
+    .hamburger:hover { background: #a71d2a; }
+    @media (max-width: 768px) {
+      .hamburger { display: block; }
+      .sidebar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 220px;
+        background-color: #c82333;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease;
+        z-index: 1500;
+      }
+      .sidebar.active { transform: translateX(0); }
+      .main-container { flex-direction: column; }
+      main { padding: 100px 1rem 1rem; margin-left: 0; }
+    }
+
+    /* Plaque styles */
+    /* (paste the award-plaque CSS block from my previous message here) */
+  :root{
+    --plaque-bg: #fff8ef;
+    --plaque-grad1:#fff1dc;
+    --plaque-grad2:#ffe0b2;
+    --frame:#741b12;
+    --frame-dark:#4f0f0a;
+    --accent-red:#d71c24;
+    --accent-gold:#f7c948;
+    --accent-gold-deep:#d9a500;
+    --ink:#2b2b2b;
+    --ink-soft:#5a5a5a;
+    --shadow: 0 12px 30px rgba(0,0,0,.20);
+  }
+  @media (prefers-color-scheme: dark){
+    :root{
+      --plaque-bg:#26150f;
+      --plaque-grad1:#321a13;
+      --plaque-grad2:#3b1f15;
+      --frame:#3a0b07;
+      --frame-dark:#2a0704;
+      --ink:#f1ece7;
+      --ink-soft:#d9d2ca;
+      --shadow: 0 12px 30px rgba(0,0,0,.6);
     }
   }
 
-  /* Hamburger button */
-.hamburger {
-  display: none;
-  font-size: 2rem;
-  background: #c82333;
-  color: white;
-  border: none;
-  border-radius: 8px;     /* matches other buttons */
-  padding: 6px 12px;
-  cursor: pointer;
-  position: fixed;
-  top: 15px;
-  left: 15px;
-  z-index: 3000;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.25); /* permanent shadow */
-  transition: background 0.2s;
+  .award-plaque{
+    display:grid;
+    place-items:center;
+    padding:clamp(16px, 4vw, 36px);
+    font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
+    color:var(--ink);
+  }
+
+  .plaque-frame{
+    width:min(950px, 95vw);
+    background:
+      linear-gradient(180deg, var(--plaque-grad1), var(--plaque-grad2));
+    border-radius:22px;
+    border:6px solid var(--frame);
+    box-shadow: var(--shadow);
+    position:relative;
+    overflow:hidden;
+  }
+
+  /* subtle checker edge for diner vibe */
+  .plaque-frame::before{
+    content:"";
+    position:absolute; inset:0;
+    background:
+      radial-gradient(circle at 12px 12px, rgba(0,0,0,.08) 8px, transparent 9px) 0 0/24px 24px;
+    opacity:.25;
+    pointer-events:none;
+  }
+
+  .plaque-header{
+    position:relative;
+    text-align:center;
+    padding: clamp(22px, 5vw, 38px) 16px 8px;
+    background:
+      radial-gradient(1200px 200px at 50% -30%, rgba(255,219,88,.45), transparent 70%),
+      linear-gradient(180deg, rgba(215,28,36,.10), transparent);
+  }
+
+  .plaque-title{
+    margin:0;
+    line-height:1.05;
+    letter-spacing: .02em;
+    text-transform: uppercase;
+    color: #fff;
+    text-shadow:
+      0 2px 0 rgba(0,0,0,.35),
+      0 0 30px rgba(215,28,36,.6),
+      0 0 12px rgba(255,208,0,.45);
+    font-weight: 900;
+  }
+  .title-top{
+    display:block;
+    font-size: clamp(28px, 6vw, 56px);
+    background: linear-gradient(180deg, #fff 0%, #ffe38a 60%, #ffc400 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    text-shadow:
+      0 2px 0 rgba(0,0,0,.35),
+      0 10px 20px rgba(255, 0, 0, .15);
+  }
+  .title-sub{
+    display:block;
+    margin-top: 6px;
+    font-size: clamp(16px, 3.2vw, 28px);
+    color: #fff6d1;
+    letter-spacing: .25em;
+  }
+
+  .ribbon{
+    position:absolute; top:18px; width:130px; height:26px;
+    background: linear-gradient(180deg, var(--accent-red), #8e0f14);
+    border:2px solid var(--frame-dark);
+    filter: drop-shadow(0 8px 8px rgba(0,0,0,.25));
+  }
+  .ribbon.left{ left:14px; transform: skewX(-12deg); }
+  .ribbon.right{ right:14px; transform: skewX(12deg); }
+
+  .plaque-body{
+    display:grid;
+    grid-template-columns: minmax(240px, 280px) 1fr;
+    gap: clamp(16px, 3.5vw, 36px);
+    padding: clamp(18px, 4.5vw, 34px);
+    align-items:center;
+  }
+  @media (max-width: 720px){
+    .plaque-body{ grid-template-columns: 1fr; text-align:center; }
+  }
+
+  .winner-card{
+    margin:0;
+    display:grid;
+    gap:12px;
+    justify-items:center;
+  }
+  .winner-photo{
+    border-radius:18px;
+    border:6px solid var(--accent-gold);
+    outline: 3px solid var(--accent-gold-deep);
+    box-shadow: 0 12px 24px rgba(0,0,0,.25), inset 0 0 0 4px #fff3;
+    object-fit: cover;
+    width:100%;
+    height:auto;
+    max-width:280px;
+    aspect-ratio: 1/1;
+    background: #ddd;
+  }
+  .winner-meta{
+    display:grid; gap:2px;
+  }
+  .winner-name{
+    font-weight:900;
+    font-size: clamp(20px, 3.6vw, 28px);
+    color: var(--frame);
+  }
+  .winner-tagline{
+    color: var(--ink-soft);
+    font-size: 14px;
+  }
+  .winner-date{
+    font-size: 13px;
+    color:#7a5d19;
+    font-weight:700;
+  }
+
+  .blurb{
+    font-size: clamp(15px, 2.4vw, 17px);
+    line-height:1.6;
+    background: #fff9;
+    border:1px solid #00000010;
+    border-radius:14px;
+    padding:16px 18px;
+  }
+
+  .badges{
+    grid-column: 1 / -1;
+    display:flex; flex-wrap:wrap; gap:12px;
+    padding-top:6px;
+  }
+  .badge{
+    display:inline-flex; align-items:center; gap:8px;
+    background: linear-gradient(180deg, #fff7d6, #ffe184);
+    border:2px solid var(--accent-gold-deep);
+    border-radius:999px;
+    padding:8px 12px;
+    font-weight:700; font-size:14px;
+    color:#5d3e00;
+    box-shadow: 0 6px 14px rgba(0,0,0,.15);
+  }
+  .badge svg{
+    width:18px; height:18px; fill:#8b5e00;
+    filter: drop-shadow(0 1px 0 #fff8);
+  }
+
+  .plaque-footer{
+    display:flex; align-items:center; justify-content:space-between;
+    gap:12px;
+    padding: 0 18px 18px;
+  }
+  .cta{
+    margin: 8px 0 0;
+    background:
+      linear-gradient(180deg, #ffd24a, #ffb300);
+    color:#411000;
+    font-weight:900;
+    border:3px solid #a45a00;
+    border-radius:14px;
+    padding:10px 16px;
+    cursor:pointer;
+    text-transform: uppercase;
+    letter-spacing:.06em;
+    transition: transform .08s ease, filter .2s ease;
+    box-shadow: 0 10px 18px rgba(0,0,0,.18);
+  }
+  .cta:hover{ transform: translateY(-1px); filter: brightness(1.03); }
+  .cta:active{ transform: translateY(1px); }
+
+  .accent-line{
+    flex:1;
+    height:10px;
+    background:
+      repeating-linear-gradient(90deg, #fff, #fff 12px, #000 12px, #000 24px);
+    border-radius: 8px;
+    border:2px solid #000;
+    opacity:.35;
+  }
+  .plaque-frame{
+  width: min(680px, 92vw);     /* smaller overall */
+  border-width: 5px;
 }
-.hamburger:hover {
-  background: #a71d2a;
+
+.plaque-header{
+  padding: 18px 12px 6px;      /* tighter header */
 }
 
-
-/* Sidebar adjustments for mobile */
-@media (max-width: 768px) {
-  .hamburger {
-    display: block; /* show hamburger on small screens */
-  }
-
-  announcement-banner {
-    margin-top: 60px; /* push it down below the hamburger */
-
-  }
-
-  .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 220px;
-    background-color: #c82333;
-    transform: translateX(-100%); /* hidden */
-    transition: transform 0.3s ease;
-    z-index: 1500;
-  }
-
-  .sidebar.active {
-    transform: translateX(0); /* slide in */
-  }
-
-  /* Make sure main content isn’t squeezed */
-  .main-container {
-    flex-direction: column;
-  }
-  main {
-    padding: 100px 1rem 1rem;
-    margin-left: 0;
-  }
+.title-top{
+  font-size: clamp(22px, 5vw, 40px); /* smaller main title */
+}
+.title-sub{
+  font-size: clamp(13px, 2.6vw, 20px); /* smaller sub title */
+  letter-spacing: .2em;
 }
 
+/* Center the body & switch to single column */
+.plaque-body{
+  grid-template-columns: 1fr;  /* single column */
+  justify-items: center;       /* center content horizontally */
+  text-align: center;          /* center text */
+  gap: 14px;
+  padding: 16px 18px 18px;
+}
+
+/* Winner card tighter + centered */
+.winner-card{
+  gap: 8px;
+  justify-items: center;
+}
+
+.winner-photo{
+  max-width: 220px;            /* smaller photo */
+  border-width: 5px;
+  outline-width: 2px;
+}
+
+.winner-name{
+  font-size: clamp(18px, 3.2vw, 24px);
+}
+.winner-tagline, .winner-date{
+  font-size: 12px;
+}
+
+/* If you removed the blurb, tighten badges spacing too */
+.badges{
+  padding-top: 4px;
+  justify-content: center;     /* center badges row */
+  gap: 10px;
+}
+
+.badge{
+  padding: 6px 10px;
+  font-size: 13px;
+  border-width: 2px;
+}
+
+.plaque-footer{
+  padding: 0 14px 14px;
+}
+.cta{
+  padding: 8px 14px;
+  border-width: 2px;
+  font-size: 0.9rem;
+}
   </style>
 </head>
 <body>
@@ -315,22 +554,25 @@
 
     <main class="home-content">
 
-      <div class="announcement-banner" aria-live="polite" aria-atomic="true">
-  <span>
-    ✅ Remember to clock in/out at start of shift and end of shift! &nbsp;&nbsp;|&nbsp;&nbsp;
-    ⏰ Clock in and out on emails for weekly bonuses &nbsp;&nbsp;|&nbsp;&nbsp;
-    💸 Double-check invoices before sending &nbsp;&nbsp;|&nbsp;&nbsp;
-  </span>
-</div>
+      <div class="announcement-banner">
+        <span>
+          Congratulations Jack on being our first Patty Slinger of the Month! &nbsp;&nbsp;|&nbsp;&nbsp;
+          ✅ Remember to clock in/out at start of shift and end of shift! &nbsp;&nbsp;|&nbsp;&nbsp;
+          ⏰ Clock in and out on emails for weekly bonuses &nbsp;&nbsp;|&nbsp;&nbsp;
+          💸 Double-check invoices before sending &nbsp;&nbsp;|&nbsp;&nbsp;
+        </span>
+      </div>
 
       <header class="welcome">
         <h1>🍔 Welcome to Snr. Buns!</h1>
         <p>Your quick overview & stats dashboard</p>
-
         <p style="margin-top:-0.5rem; margin-bottom:1rem; font-weight:600; color:#c82333;">
-  Please report any issues with the website via emails.
-</p>
+          Please report any issues with the website via emails.
+        </p>
       </header>
+
+      <!-- Award Plaque section -->
+      
 
       <section class="quick-stats" aria-label="Key statistics summary">
         <div class="quick-card" role="region" aria-live="polite" aria-atomic="true" aria-relevant="text">
@@ -346,7 +588,6 @@
           <h3 id="loyaltyVisits">0</h3>
         </div>
       </section>
-
       <section class="quick-nav" aria-label="Quick navigation links">
         <a href="register.html">🖋️ Register</a>
         <a href="orders.html">📋 Orders</a>
@@ -355,16 +596,73 @@
         <a href="staffmeals.html">🍽️ Staff Meals</a>
         <a href="loyalty.html">🎁 Customers</a>
       </section>
+      <section class="award-plaque" aria-labelledby="plaque-title">
+  <div class="plaque-frame">
+    <div class="plaque-header">
+      <span class="ribbon left" aria-hidden="true"></span>
+      <h2 id="plaque-title" class="plaque-title">
+        <span class="title-top">Patty Slinger</span>
+        <span class="title-sub">of the Month</span>
+      </h2>
+      <span class="ribbon right" aria-hidden="true"></span>
+    </div>
 
+    <div class="plaque-body">
+      <figure class="winner-card">
+        <img
+          src="assets/images/Jack.png"
+          alt="Portrait of Jack Crumble"
+          class="winner-photo"
+          width="240" height="240"
+          loading="lazy"
+        />
+        <figcaption class="winner-meta">
+          <div class="winner-name">Jack Crumble</div>
+          <div class="winner-tagline">Our inaugural Patty Slinger</div>
+          <div class="winner-date">October 2025</div>
+        </figcaption>
+      </figure>
+
+      <div class="badges">
+        <!-- Burger trophy SVG -->
+        <span class="badge" aria-label="Burger Trophy" title="Burger Trophy">
+          <svg viewBox="0 0 64 64" role="img" aria-hidden="true">
+            <path d="M10 8h44v8a10 10 0 0 1-10 10H20A10 10 0 0 1 10 16V8z" />
+            <rect x="14" y="30" width="36" height="6" rx="3" />
+            <rect x="12" y="38" width="40" height="8" rx="4" />
+            <rect x="18" y="48" width="28" height="4" rx="2" />
+          </svg>
+          <span>150+ Orders</span>
+        </span>
+
+        <span class="badge" aria-label="Activity Star" title="Activity Star">
+          <svg viewBox="0 0 64 64" role="img" aria-hidden="true">
+            <path d="M32 6l7.7 15.6 17.3 2.5-12.5 12.2 3 17.1L32 45.9 16.5 53.4l3-17.1L7 24.1l17.3-2.5L32 6z"/>
+          </svg>
+          <span>80+ Hours</span>
+        </span>
+
+        <span class="badge" aria-label="Team Impact" title="Team Impact">
+          <svg viewBox="0 0 64 64" role="img" aria-hidden="true">
+            <circle cx="32" cy="32" r="12"/>
+            <path d="M32 6v8M32 50v8M6 32h8M50 32h8M12 12l6 6M46 46l6 6M12 52l6-6M46 18l6-6"/>
+          </svg>
+          <span>Chaotic</span>
+        </span>
+      </div>
+    </div>
+
+    <div class="plaque-footer">
+      <div class="accent-line" aria-hidden="true"></div>
+    </div>
+  </div>
+      </section>
       <section class="recent-orders" aria-label="Recent orders">
         <h2>🧾 Recent Orders</h2>
         <ul id="recentOrdersList" tabindex="0">
           <!-- Populated by JS -->
         </ul>
       </section>
-
-      
-
       <section class="alerts" aria-label="Inventory alerts">
         <h2>⚠️ Inventory Alerts</h2>
         <ul id="inventoryAlertsList">
@@ -374,7 +672,7 @@
     </main>
   </div>
 
-<script type="module">
+ <script type="module">
 import {
   getFirestore, collection, query, where, orderBy, updateDoc, doc, onSnapshot
 } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
@@ -501,7 +799,5 @@ onSnapshot(query(collection(db, "orders"), orderBy("timestamp", "desc")), (snaps
     }
   });
 </script>
-
-
 </body>
 </html>
